[wheel]

[metadata]
name = h3
version = 20250901
author = Brightdata
license = ISC
description = H3 cli
url = https://brightdata.com
long_description = file: README.md

[options]
packages = find:
install_requires=
    pip
    aioquic
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    h3 = h3:main